2004-06-04  Vinay M R  <vinay.mandyakoppal@wipro.com>

	* mailcheck.c (set_tooltip and set_atk_relation): Set
	the accessible name to read out no of messages and remove
	duplicate relation labelled by. Fixes bug #143695

2004-03-17  Glynn Foster  <glynn.foster@sun.com>

	* help/ja/*: Add ja docs since the author never got back
	to me.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* help/*: Online localized help from Sun's translation
	team for de, es, fr, it, ko, sv, zh_CN, zh_HK and zh_TW.

2004-02-29  Dennis Smit  <ds@nerds-incorporated.org>

	* mailcheck.c (create_mail_widgets): Center
	the label in the middle of the panel (visible 
	for vertical panels). Need to work around
	normalized panel values tho.

2004-02-29  Dennis Smit  <ds@nerds-incorporated.org>

	* mailcheck.c (applet_change_background): Added
	function to handle panel background changes.

	(mailcheck_applet_fill): Add signal handler
	for change_background and some small cleanups.

2004-02-26  Dennis Smit  <ds@nerds-incorporated.org>

	* mailcheck.c: Moved the about window
	entry placing in the Mailcheck structure
	to be not in the property dialog widgets
	area. Small cleanup.

2004-02-22  Dennis Smit  <ds@nerds-incorporated.org>

	* mailcheck.c (mailcheck_execute_shell):
	Move from egg_screen_execute_command_line_async to
	gdk_spawn_command_line_on_screen.

	Fixes bug #135158.

2004-02-19  Kevin Vandersloot

	* mailcheck.c: fix updating when user doesn't want auto update. Patch
	from Srinivasa Ragavan. Fixes bug #131407

2004-02-15  Dennis Smit  <ds@nerds-incorporated.org>

	* mailcheck.c (after_mail_check):
	changed g_strdup into g_strdup_printf
	at some places, fixes gettext issues.

	Patch by: Gustavo <gustavo.giraldez@gmx.net>

	Fixes bug #134398.

2004-02-14  Dennis Smit  <ds@nerds-incorporated.org>
	
	Submitted patch by Leena Gunda to fix 
	a few multihead issues when launching commands
	fixes bug #111837

2004-02-11 Breda McColgan <breda.mccolgan@sun.com>
