@@ -1,3 +1,9 @@
+2004-07-28  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* Makefile.am: Remove extraneous defines.
+	* mailcheck.c: (mailcheck_about): Don't leak the about
+	pixbuf. Fixes bug #148499.
+
 2004-06-04  Vinay M R  <vinay.mandyakoppal@wipro.com>
 
 	* mailcheck.c (set_tooltip and set_atk_relation): Set
